<resources>
    <string name="app_name">TripReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="login">Login</string>
    <string name="OR">_____________ OR _____________</string>
    <string name="google_login">Gmail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Do not have account?,</string>
    <string name="sign_up">Sign Up</string>
    <string name="rePassword">Repeat Password</string>
    <string name="phone">Mobile</string>
    <string name="google_sign_up">Or Sign up using</string>
    <string name="sign_up_page">Sign Up</string>
    <string name="sign_up_txt"><u>Sign Up</u></string>
    <string name="google_signup">Sign Up With Google</string>

    <!-- menu Items -->
    <string name="upComing_item">UpComing</string>
    <string name="past_trip_item">Past Trips</string>
    <string name="sync_item">Sync</string>
    <string name="logout_item">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="add">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="edit">"Save "</string>
    <string name="name">Trip Name :</string>
    <string name="notes">My Notes :</string>
    <string name="destination">My Destination :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="ok">Ok</string>
    <string name="tripname">Trip Name...</string>
    <string name="note">My Notes ...</string>
    <string name="dest">My Desination ...</string>
    <string name="daty">dd/mm/yyyy</string>
    <string name="timy">00:00</string>
    <string name="addnewtrip">Add Trip</string>
    <string name="lastTrips">Latest Trips</string>
    <string name="NOTE">Notes</string>
    <string name="EDIT">Edit Trip</string>
    <string name="TRIP">Add New Trip</string>
    <string name="TRIPS">Trip Details</string>
    <string name="neutral">SNOOZE</string>
    <string name="dialog_title">Trip Reminder</string>
    <string name="dialog_msg">trip name</string>
    <string name="start">START</string>
    <string name="note_body">Fake Note Body</string>
    <string name="channel_name">Reminder Channel</string>
    <string name="channel_description">this is the reminder channel only app</string>
    <string name="login_page">Already have an Account?</string>
    <string name="register_sentence">New family member?</string>
    <string name="join">Join Us.</string>
    <string name="another_method">______________        Login With Gmail       ______________</string>
    <string name="signupPageTitle">Here is your first step with us!</string>
    <string name="edit_btn">EDIT</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="add_btn">ADD</string>
    <string name="ok_btn">OK</string>

</resources>