<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTxt_email_login"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Email"
        android:background="@drawable/text_input_layout_rounded"
        android:ems="10"
        android:hint="@string/req_email"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UnknownId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_rounded"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTxt_password_login"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="@string/req_password"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/CounterText"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_email_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_input_layout_rounded"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register_sentence"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_LogIn_login" />

    <TextView
        android:id="@+id/txt_signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/join"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="146dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_page"
        android:textColor="@color/primary_text"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_LogIn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="monospace"
        android:text="Login"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_password_login" />

    <Button
        android:id="@+id/btn_google_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/google_button_layout"
        android:fontFamily="monospace"
        android:text="G+"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/another_method"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="147dp"
        android:layout_height="136dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/rounded_button" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="139dp"
        android:layout_height="112dp"
        android:layout_marginStart="296dp"
        android:layout_marginBottom="632dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle_shape" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="95dp"
        android:layout_height="83dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/square_pink" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="102dp"
        android:layout_height="90dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google_login"
        app:srcCompat="@drawable/square_yellow" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="76dp"
        android:layout_height="82dp"
        android:layout_marginStart="344dp"
        android:layout_marginBottom="580dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rounded_button" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="74dp"
        android:layout_height="68dp"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="680dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/square_pink" />

</androidx.constraintlayout.widget.ConstraintLayout>
